6867645: java -Xshare:dump failed - read only space too small

Reviewed-by: iveresov, tonyp, ysr